--- a/rnTest/package.json
+++ b/rnTest/package.json
@@ -14,6 +14,8 @@
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
     "jest": "20.0.4",
+    "react-native": "^0.44.3",
+    "react-native-scrollable-tab-view": "^0.6.7",
     "react-navigation": "^1.0.0-beta.11",
     "react-test-renderer": "16.0.0-alpha.6"
   },
