--- a/rnTest/package.json
+++ b/rnTest/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.6",
-    "react-native": "0.44.3"
+    "react-native": "0.44.3",
+    "react-redux": "^5.0.6"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
@@ -17,7 +18,8 @@
     "react-native": "^0.44.3",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-navigation": "^1.0.0-beta.11",
-    "react-test-renderer": "16.0.0-alpha.6"
+    "react-test-renderer": "16.0.0-alpha.6",
+    "redux-devtools": "^3.4.0"
   },
   "jest": {
     "preset": "react-native"
